--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
               <li><a class="active" href="#"><i class="fa fa-home" style='font-size:36px'></i></a></li>
-              <li><a href="../pages/about.html">About</a></li>
-              <li><a  href="../pages/quotes.html">Quotes</a></li>
-              <li id="footer-list"> <a href="https://www.bbc.co.uk/iplayer/group/p0977f8d" target="_blank"><img src="../pages/Images/bbciplayer_logo.jpg" alt="bbc iplayer"> </a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a  href=".quotes.html">Quotes</a></li>
+              <li id="footer-list"> <a href="https://www.bbc.co.uk/iplayer/group/p0977f8d" target="_blank"><img src="Images/bbciplayer_logo.jpg" alt="bbc iplayer"> </a></li>
           </ul>
      </div>
   </div>
@@ -46,7 +46,7 @@
 
 <div class="container-fluid">
     <h1 class="margin"><b>DOCUMENTARY AND FILMAKER</b></h1>
-    <img class="a-curt" src="..//pages/Images/OIP (4).jpg" alt="Adam curtis">
+    <img class="a-curt" src="Images/OIP (4).jpg" alt="Adam curtis">
     <!-- <h2 class="margin" > -->
 
 <!--Creating the Second container for img and some p text -->
@@ -76,7 +76,7 @@
       <div class="col-md-4"> 
         <div class="panel panel-info">
           <div class="img-head">HyperNormalisation Contains very strong language and disturbing scenes. Our world is strange and often fake and corrupt. But we think it’s normal because we can’t see anything else.</div>
-            <div class="img-body"><img src="images/hyper (2).jpg" class="img-responsive" style="width:100%" alt="hyper norm">
+            <div class="img-body"><img src="Images/hyper (2).jpg" class="img-responsive" style="width:100%" alt="hyper norm">
             </div>
             <div class="img-foot"><a href="https://www.bbc.co.uk/iplayer/episode/p04b183c/hypernormalisation" target="_blank"><i class='fa fa-play-circle'></i> click here to watch the film</a>
             </div>
@@ -89,7 +89,7 @@
             </div>
 
                 <div class="img-body">
-                  <img  src="images/thePowerOfNightmares (3).jpg" class="img-responsive" style="width:100%" alt="power of nightmares">
+                  <img  src="Images/thePowerOfNightmares (3).jpg" class="img-responsive" style="width:100%" alt="power of nightmares">
                 </div>
 
                 
@@ -110,9 +110,9 @@
   
      <ul class="nav navbar-inverse" >
             <li id="footer-list"><a class="active" href="#"><i class="fa fa-home" style='font-size:36px'></i></a></li>
-            <li id="footer-list"><a href="../pages/about.html">About</a></li>
-            <li id="footer-list"><a href="../pages/quotes.html">Quotes</a></li>
-            <li id="footer-list"> <a href="https://www.bbc.co.uk/iplayer/group/p0977f8d" target="_blank"><img src="../pages/Images/bbciplayer_logo.jpg" alt="bbc iplayer"> </a></li>
+            <li id="footer-list"><a href="about.html">About</a></li>
+            <li id="footer-list"><a href="pages/quotes.html">Quotes</a></li>
+            <li id="footer-list"> <a href="https://www.bbc.co.uk/iplayer/group/p0977f8d" target="_blank"><img src="Images/bbciplayer_logo.jpg" alt="bbc iplayer"> </a></li>
             <p>Page created by David Sobieralski using  Bootstrap themes and Font Awesome</p>
      <i class="fa fa-envelope" style="font-size:24px"></i> sobieralskidavid@outlook.com
             
