--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="..//pages/index.html"><i class="fa fa-home" style='font-size:36px'></i></a></li>
+                <li><a href="index.html"><i class="fa fa-home" style='font-size:36px'></i></a></li>
                 <li><a class="active" href="#">About</a></li>
-                <li><a  href="../pages/quotes.html">Quotes</a></li>
+                <li><a  href="quotes.html">Quotes</a></li>
                 <li id="footer-list"> <a href="https://www.bbc.co.uk/iplayer/group/p0977f8d" target="_blank"><img src="../pages/Images/bbciplayer_logo.jpg" alt="bbc iplayer"></a></li>
             </ul>
        </div>
@@ -184,7 +184,7 @@
         <li id="footer-list"><a href="../pages/index.html"><i class="fa fa-home" style='font-size:36px'></i></a></li>
         <li id="footer-list"><a class="active" href="#">About</a></li>
         <li id="footer-list"><a href="quotes.html">Quotes</a></li>
-        <li id="footer-list"> <a href="https://www.bbc.co.uk/iplayer/group/p0977f8d" target="_blank"><img src="../pages/Images/bbciplayer_logo.jpg" alt="bbc iplayer"> </a></li>
+        <li id="footer-list"> <a href="https://www.bbc.co.uk/iplayer/group/p0977f8d" target="_blank"><img src="Images/bbciplayer_logo.jpg" alt="bbc iplayer"> </a></li>
         <p>Page created by David Sobieralski using  Bootstrap themes and Font Awesome</p>
      <i class="fa fa-envelope" style="font-size:24px"></i> sobieralskidavid@outlook.com
 </ul>
