--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                 <li><a href="index.html"><i class="fa fa-home" style='font-size:36px'></i></a></li>
                 <li><a class="active" href="#">About</a></li>
                 <li><a  href="quotes.html">Quotes</a></li>
-                <li id="footer-list"> <a href="https://www.bbc.co.uk/iplayer/group/p0977f8d" target="_blank"><img src="../pages/Images/bbciplayer_logo.jpg" alt="bbc iplayer"></a></li>
+                <li id="footer-list"> <a href="https://www.bbc.co.uk/iplayer/group/p0977f8d" target="_blank"><img src="Images/bbciplayer_logo.jpg" alt="bbc iplayer"></a></li>
             </ul>
        </div>
     </div>
@@ -181,7 +181,7 @@
 <footer class="footer text-center">
    
     <ul class="nav navbar-inverse" >
-        <li id="footer-list"><a href="../pages/index.html"><i class="fa fa-home" style='font-size:36px'></i></a></li>
+        <li id="footer-list"><a href="index.html"><i class="fa fa-home" style='font-size:36px'></i></a></li>
         <li id="footer-list"><a class="active" href="#">About</a></li>
         <li id="footer-list"><a href="quotes.html">Quotes</a></li>
         <li id="footer-list"> <a href="https://www.bbc.co.uk/iplayer/group/p0977f8d" target="_blank"><img src="Images/bbciplayer_logo.jpg" alt="bbc iplayer"> </a></li>
