--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul class="nav navbar-nav navbar-right">
               <li><a class="active" href="#"><i class="fa fa-home" style='font-size:36px'></i></a></li>
               <li><a href="about.html">About</a></li>
-              <li><a  href=".quotes.html">Quotes</a></li>
+              <li><a  href="quotes.html">Quotes</a></li>
               <li id="footer-list"> <a href="https://www.bbc.co.uk/iplayer/group/p0977f8d" target="_blank"><img src="Images/bbciplayer_logo.jpg" alt="bbc iplayer"> </a></li>
           </ul>
      </div>
@@ -111,7 +111,7 @@
      <ul class="nav navbar-inverse" >
             <li id="footer-list"><a class="active" href="#"><i class="fa fa-home" style='font-size:36px'></i></a></li>
             <li id="footer-list"><a href="about.html">About</a></li>
-            <li id="footer-list"><a href="pages/quotes.html">Quotes</a></li>
+            <li id="footer-list"><a href="quotes.html">Quotes</a></li>
             <li id="footer-list"> <a href="https://www.bbc.co.uk/iplayer/group/p0977f8d" target="_blank"><img src="Images/bbciplayer_logo.jpg" alt="bbc iplayer"> </a></li>
             <p>Page created by David Sobieralski using  Bootstrap themes and Font Awesome</p>
      <i class="fa fa-envelope" style="font-size:24px"></i> sobieralskidavid@outlook.com
