--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
             <i class="fa fa-circle fa-stack-2x"></i>
             <strong class="fa-stack-1x"style="color:white;" >10</strong>
           </span>. All Watched Over By Machines of Loving Grace</h3>
-        <img class="poster" src="images/watched over.jpg" alt="machines of loving grace">
+        <img class="poster" src="Images/watched over.jpg" alt="machines of loving grace">
         <p class="poster-info">
            In this series we are brought to the forefront of the old world ideas colliding with a new and unexplored technological advancement, those that won the battle to create the output would become the masters of peoples minds, twisting reality to create everlasting want and fear.
 
@@ -87,7 +87,7 @@
             <i class="fa fa-circle fa-stack-2x"></i>
             <strong class="fa-stack-1x"style="color:white;" >9</strong>
           </span>. The way of all flesh</h3>
-        <img class="poster" src="images/248928-modern-times-the-way-of-all-flesh-0-230-0-345-crop.jpg" alt="The way of all flesh">
+        <img class="poster" src="Images/248928-modern-times-the-way-of-all-flesh-0-230-0-345-crop.jpg" alt="The way of all flesh">
         <p class="poster-info">
             ciggaretes and silk campaigns,
             holy eyes and vices maim,
@@ -106,7 +106,7 @@
             <i class="fa fa-circle fa-stack-2x"></i>
             <strong class="fa-stack-1x"style="color:white;" >8</strong>
           </span>. Can't get you out of my head 1-3</h3>
-        <img class="poster" src="images/p096ltk0my head1-3.jpg" alt="can't get you out of my head">.
+        <img class="poster" src="Images/p096ltk0my head1-3.jpg" alt="can't get you out of my head">.
         <p class="poster-info">
             In his new documentary, Adam Curtis argues humanity’s worst enemy is itself. 'Can't Get You Out Of My Head' suggests our innate flaws are what's holding society back. 
         </p>
@@ -118,7 +118,7 @@
             <i class="fa fa-circle fa-stack-2x"></i>
             <strong class="fa-stack-1x"style="color:white;" >7</strong>
           </span>. Can't get you out of my head 4-6</h3>
-        <img class="poster" src="images/wired-adamcurtis.jpg" alt="can't get you out of my head">
+        <img class="poster" src="Images/wired-adamcurtis.jpg" alt="can't get you out of my head">
         <p class="poster-info">Love, power, money, ghosts of empire, conspiracies, artificial intelligence – and You. An emotional history of the modern world by Adam Curtis. </p>
     </div>
     <div class="box box7">
@@ -126,7 +126,7 @@
          <i class="fa fa-circle fa-stack-2x"></i>
          <strong class="fa-stack-1x"style="color:white;" >6</strong>
        </span>. The trap part 2</h3>
-        <img class="poster" src="images/the trap 2.jpg" alt="The trap part 2">
+        <img class="poster" src="Images/the trap 2.jpg" alt="The trap part 2">
          <p class="poster-info"> In this film Adam Curtis explores the rise of political idologies around the world that gave rise to power struggles that would polarise the world for years too come, and create a vacuum for insideous ideas.
          </p>
      </div>
@@ -135,7 +135,7 @@
         <i class="fa fa-circle fa-stack-2x"></i>
         <strong class="fa-stack-1x"style="color:white;" >5</strong>
       </span>. The trap part 1</h3>
-       <img class="poster" src="images/the trap 1.jpg" alt="The trap part 2">
+       <img class="poster" src="Images/the trap 1.jpg" alt="The trap part 2">
         <p class="poster-info">The series consists of three 60-minute programmes which explore the modern concept and definition of freedom, specifically, "how a simplistic model of human beings as self-seeking, almost robotic, creatures led to today's idea of freedom."</p>
     </div>
     <div class="box box6">
@@ -143,7 +143,7 @@
             <i class="fa fa-circle fa-stack-2x"></i>
             <strong class="fa-stack-1x"style="color:white;" >4</strong>
           </span>. The power of nightmares 2</h3>
-        <img class="poster" src="images/the-power-of-nightmares-the-rise-of-the-politics-of-fear.33448.jpg" alt="The power of nightmares poster">
+        <img class="poster" src="Images/the-power-of-nightmares-the-rise-of-the-politics-of-fear.33448.jpg" alt="The power of nightmares poster">
         <p class="poster-info">The Power of Nightmares. Adam Curtis explores how the illusory threat of a hclassden network of terror has come to dominate global politics, with fake fear and distracting fixations.</p>
     
     
@@ -153,7 +153,7 @@
         <i class="fa fa-circle fa-stack-2x"></i>
         <strong class="fa-stack-1x"style="color:white;" >3</strong>
       </span>. The power of nightmares part 1</h3>
-       <img class="poster" src="images/thePowerOfNightmares (3).jpg" alt="The power of nightmares poster">
+       <img class="poster" src="Images/thePowerOfNightmares (3).jpg" alt="The power of nightmares poster">
         <p class="poster-info"> In this film Adam Curtis explores the rise of political idologies around the wrold that gave rise to power struggles that would polarise the world for years too come, and create a vacuum for insideous ideas.
         </p>
     </div>
@@ -163,7 +163,7 @@
             <i class="fa fa-circle fa-stack-2x"></i>
             <strong class="fa-stack-1x"style="color:white;" >2</strong>
           </span>. Bitter Lake</h3>
-        <img class="poster" src="images/bitterLake (2).jpg" alt="Bitter lake poster">
+        <img class="poster" src="Images/bitterLake (2).jpg" alt="Bitter lake poster">
         <p class="poster-info">  Bitter Lake is a new, adventurous and epic film by Adam Curtis that explains why the big stories that politicians tell us have become so simplified that we can't really see the world any longer. The narrative goes all over the world, America, Britain, Russia and Saudi Arabia - but the country at the heart of it is Afghanistan.</p>
     </div>
     <div class="box box10">
@@ -171,7 +171,7 @@
             <i class="fa fa-circle fa-stack-2x"></i>
             <strong class="fa-stack-1x"style="color:white;" >1</strong>
           </span>. HyperNormalisation</h3>
-        <img class="poster" src="images/hyper (2).jpg" alt="Hypernormalisation picture ">
+        <img class="poster" src="Images/hyper (2).jpg" alt="Hypernormalisation picture ">
         <p class="poster-info">HyperNormalisation is a 2016 BBC documentary by British filmmaker Adam Curtis. It argues that governments, financiers, and technological utopians have, since the 1970s, given up on the complex "real world" and built a simpler "fake world" run by corporations and kept stable by politicians. The film was released on 16 October 2016 on the BBC iPlayer.</p>
     </div>
 </div>
