--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <h3 class="margin">Who's He?</h3>
     <p class="main-info">Kevin Adam Curtis is a documentary Filmmaker, Social commentater and Journalist, He has produced some of the most in depth, critical and detailed analysis of the modern world, with particular interest in power systems and how they effect the human condition.He has created a superb body of work and is acclaimed for his delving and forensic dissections of the symbiosis that exists between the powerful and those they claim to serve.
-        For more information go to the<a href="about.html"> about</a> section of ths site or click the button below.
+        For more information go to the<a href="about.html"> about</a> section of this site or click the button below.
     </p>
     <a  href="https://en.wikipedia.org/wiki/Adam_Curtis#:~:text=Adam%20Curtis%20was%20born%20in%20Dartford%20in%20Kent%2C,introduced%20him%20to%20the%20work%20of%20Robert%20Rauschenberg." target="_blank"><img class="wiki" src="Images/Wikipedia_logo_red.png"></a>
 </div> 
