--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
     <meta name="description" content="This page will hold information and links about Adam Curtis">
     <meta name="keywords" content="HTML, CSS,">
-    <meta name="author" content="Davclass Sobieralski"> 
+    <meta name="author" content="David Sobieralski"> 
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
